# simple-2d-platformer

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  CLAUDE.md  CMakeCache.txt  CMakeLists.txt  Makefile  build.zig  cmake_install.cmake  readme.md
resources/shaders/: color_tint.glsl
src/: actions.h  animation.c  animation.h  collisions.c  collisions.h  color.h  components.h  ecs.c  ecs.h  enemy.c  enemy.h  fallable.c  fallable.h  game.c  game.h  healthbar.c  healthbar.h  jumpable.c  jumpable.h  main.c  moveable.c  moveable.h  platform.c  platform.h  player.c  player.h  screen.c  screen.h  sound.c  sound.h  sprite.c  sprite.h  stunnable.c  stunnable.h  terminal.h  weapons.c  weapons.h
tests/: test_player_jump.c
